gcc/testsuite/rust/rustc/ui/issues/issue-68092-unicode-ident-after-incomplete-expr.rs
macro_rules! x {
    ($($c:tt)*) => {
        $($c)รถ* // { dg-error "" "" { target *-*-* } }
    };
}

fn main() {
    x!(!);
}

